<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard" />
    <item android:id="@+id/dashbooks"
        android:title="@string/homebtnbooks"
        android:icon="@drawable/ic_book"/>
    <item android:id="@+id/dashnewspapers"
        android:title="@string/homebtnnewspapers"
        android:icon="@drawable/ic_news"/>
    <item android:id="@+id/dashentertainment"
        android:title="@string/homebtnentertainment"
        android:icon="@drawable/ic_music_player"/>
    <item android:id="@+id/dashmyorders"
        android:title="@string/myorders"
        android:icon="@drawable/ic_order"/>
    <item android:id="@+id/dashsettings"
        android:title="@string/settings"
        android:icon="@drawable/ic_setting" />
</group>
    <item android:title="Contact Us" android:icon="@drawable/ic_contact">
        <menu>
            <item android:id="@+id/kidsyphone"
                android:title="0712334221"
                android:icon="@drawable/ic_phone" />
            <item android:id="@+id/kidsyemail"
                android:title="Kidsy@gmail.com"
                android:icon="@drawable/ic_email" />
        </menu>
    </item>
</menu>
