<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/default_gap">


    <EditText
        android:id="@+id/epfirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPersonName"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:textSize="10sp"
        android:hint="@string/payfirstname"
        android:textColor="@color/dark"
        android:autofillHints="@string/payfirstname"
        />
    <EditText
        android:id="@+id/epemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="0dp"
        android:textSize="10sp"
        android:layout_marginTop="0dp"
        android:hint="@string/payemail"
        android:autofillHints="@string/payemail"
        />
    <EditText
        android:id="@+id/epaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPostalAddress"
        android:textSize="10sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:hint="@string/payaddress"
        android:autofillHints="@string/payaddress"
        />
    <EditText
        android:id="@+id/epcardnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:inputType="number"
        android:layout_marginStart="5dp"
        android:textSize="10sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:hint="@string/paycardnumber"
        android:autofillHints="@string/paycardnumber"
        />
    <EditText
        android:id="@+id/epcardowner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPersonName"
        android:textSize="10sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:hint="@string/paycardowner"
        android:autofillHints="@string/paycardowner"
        />
    <EditText
        android:id="@+id/epcardexpiredate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="0dp"
        android:textSize="10sp"
        android:layout_marginTop="0dp"
        android:hint="@string/paycardexpiredate"
        android:autofillHints="@string/paycardexpiredate"
        />
    <EditText
        android:id="@+id/epbookname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPersonName"
        android:layout_marginBottom="0dp"
        android:textSize="10sp"
        android:layout_marginTop="0dp"
        android:hint="@string/paybookname"
        android:autofillHints="@string/paybookname"
        />
    <EditText
        android:id="@+id/epqty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPersonName"
        android:layout_marginBottom="0dp"
        android:textSize="10sp"
        android:layout_marginTop="0dp"
        android:hint="@string/paybookqty"
        android:autofillHints="@string/paybookqty"
        />
    <EditText
        android:id="@+id/eptotalprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:inputType="numberDecimal"
        android:layout_marginStart="5dp"
        android:textSize="10sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:hint="@string/paytotalprice"
        android:autofillHints="@string/paytotalprice"
        />
    <EditText
        android:id="@+id/epdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="date"
        android:textSize="10sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:hint="@string/paydate"
        android:autofillHints="@string/paydate"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btneditpay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:text="@string/update"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/btndltpay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/delete"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    </LinearLayout>

</LinearLayout>