<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/default_gap">

    <EditText
        android:id="@+id/edorderid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPersonName"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:textSize="12sp"
        android:hint="@string/orderid"
        android:textColor="@color/dark"
        android:autofillHints="@string/orderid"
        />
    <EditText
        android:id="@+id/edfirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPersonName"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:textSize="12sp"
        android:hint="@string/payfirstname"
        android:textColor="@color/dark"
        android:autofillHints="@string/payfirstname"
        />
    <EditText
        android:id="@+id/edaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textPostalAddress"
        android:textSize="12sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:hint="@string/payaddress"
        android:autofillHints="@string/payaddress"
        />

    <EditText
        android:id="@+id/edqty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:inputType="textPersonName"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="0dp"
        android:textSize="12sp"
        android:layout_marginTop="0dp"
        android:hint="@string/paybookqty"
        android:autofillHints="@string/paybookqty"
        />
    <EditText
        android:id="@+id/eddate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="date"
        android:textSize="12sp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:hint="@string/deldate"
        android:autofillHints="@string/deldate"
        />


        <Button
            android:id="@+id/btneditdel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/update"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/btndltdel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/delete"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            />


</LinearLayout>